assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Abel:100,200,300,400,500,600,700|Roboto+Condensed:100,200,300,400,500,600,700');


/*----------------------------------------------------------------------colors*/

.bg-color-nav-bar {
    background-color: #000000;
}

.band-bg-color {
    background: linear-gradient(to bottom right, #1bd37a 0%, #000000 75%)
}

.watch-bg-color {
    background: linear-gradient(to bottom right, #00bcbc 0%, #000000 75%)
}

.listen-bg-color {
    background: linear-gradient(to bottom right, #ff0066 0%, #000000 75%)
}

.live-bg-color {
    background: linear-gradient(to bottom right, #ffcc00 0%, #000000 75%)
}


.contact-bg-color {
    background: linear-gradient(to bottom right, #849191 0%, #000000 75%)
}

.bg-color-footer {
    background-color: #000000;
}


/*---------------------------------------------------------------------special*/

body {
    background-color: #000000;
}

h1,
h2,
h3,
h4 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

/*--------------------------------------------------------------------nav bar*/

.navbar {
    min-height: 80px;
    width: 100%;
    border-radius: 0px;
    border-color: #000000;
}

#navbar {
    padding: 0;
}

.navbar-default .navbar-nav li a {
    padding-top: 30px;
    color: #ffffff;
    font-family: "Abel", sans-serif;
    font-size: 22px;
    font-weight: 600;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.navbar-default .navbar-nav li .nav1:hover {
    color: #1bd37a;
}

.navbar-default .navbar-nav li .nav2:hover {
    color: #00bcbc;
}

.navbar-default .navbar-nav li .nav3:hover {
    color: #ff0066;
}

.navbar-default .navbar-nav li .nav4:hover {
    color: #ffcc00;
}

.navbar-default .navbar-nav li .nav5:hover {
    color: #849191;
}


.navbar-brand {
    padding-top: 20px;
    padding-bottom: 20px;
}

.navbar-right {
    max-width: 400px;
}


/*----------------------------------------------------------------social links*/

.social-links li a i {
    width: 28px;
    height: 28px;
    padding: 12px 0px;
    border-radius: 50%;
    font-size: 18px;
    line-height: 4px;
    text-align: center;
    color: #ffffff;
    background: #a8a599;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background: #444444;
}



/*----------------------------------------------------------------------footer*/

footer {
    max-height: 60px;
    margin-top: 10px;
    padding: 20px 10px 20px 10px;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 14px;
    font-weight: 300;
    color: #ffffff;
}

.footer {
    left: 0;
    bottom: 0;
    width: 100%;
}

.contact-us a {
    float: right;
    text-decoration: none;
    color: #ffffff;
    font-family: "Abel", sans-serif;
    font-size: 18px;
    font-weight: 400;
}

.contact-us a:hover {
    text-decoration: none;
    color: #444444;
}

/*---------------------------------------------------------------------section*/

section {
    min-height: calc(100vh - 170px);
}

.about-heading {
    padding-top: 40px;
    padding-bottom: 20px;
    text-align: center;
    font-family: "Abel", sans-serif;
    font-weight: 700;
    color: #ffffff;
}

.about-text {
    text-align: center;
    color: #ffffff;
    font-size: 18px;
}

/*--------------------------------------------------------------------carousel*/

.carousel {
    width: 80%;
    height: 300;
    margin: auto;
    box-shadow: 7px 7px 3.5px #454647;
}

.carousel-inner {
    border-radius: 1px;
    overflow: hidden;
}

.carousel-control {
    border-radius: 1px;
}

.carousel-caption {
    visibility: hidden;
}

.carousel-caption a {
    text-decoration: none;
    font-family: "Abel", sans-serif;
    font-size: 28px;
    font-weight: 600;
    text-shadow: 2px 2px #000000;
}

.caption-listen a {
    color: #ff0066;
}

.caption-band a {
    color: #1bd37a;
}

.caption-live a {
    color: #ffcc00;
}

/*---------------------------------------------------------------------Contact*/

.contact-heading {
    font-family: "Abel", sans-serif;
    font-weight: 700;
    color: #ffffff;
    margin-top: 25px;
    margin-bottom: 20px;
}

.contact-text {
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 500;
    font-size: 18px;
    color: #ffffff;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    background-color: #3e4444;
    color: #ffffff;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

button[type="submit"]:hover {
    background: #82b74b;
    color: #ffffff;
}

/*--------------------------------------------------------------------the band*/

.band-heading {
    display: block;
    padding: 0 20px 20px;
    font-family: "Abel", sans-serif;
    font-weight: 700;
    color: #ffffff;
    text-align: center;
}

.band-image {
    margin-left: auto;
    margin-right: auto;
    width: 120px;
    height: 120px;
    border-radius: 60px;
    display: block;
}

.band-name {
    padding-top: 20px;
    font-family: "Abel", sans-serif;
    font-weight: 500;
    color: #ffffff;
}

.band-bio {
    padding-top: 10px;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 18px;
    font-weight: 500;
    color: #ffffff;
    text-align: left;
}


/*-----------------------------------------------------------------------watch*/

.video {
    padding-top: 40px;
}

.video1 {
    display: block;
    margin: auto;
}

.video2 {
    display: block;
    margin: auto;
}

.video3 {
    display: block;
    margin: auto;
}

.youtubelink {
    display: block;
    padding-top: 20px;
    text-align: center;
    font-family: "Abel", sans-serif;
    color: #ffffff;
    font-size: 30px;
    font-weight: 600;
    text-decoration: none;
}

.youtubelink:hover {
    color: #00bcbc;
    text-decoration: none;
}

/*------------------------------------------------------------------------live*/

.livecountdown {
    padding: 10px 0;
    font-family: "Abel", sans-serif;
    font-weight: 700;
    text-align: center;
    color: #ffffff;
}

#live-countdown {
    padding-bottom: 10px;
    text-align: center;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 32px;
    font-weight: 500;
    color: #ffffff;
}

.table {
    margin: auto;
    max-width: 70%;
    background-color: #4c4c4c;
    color: #ffffff;
    border-radius: 10px;
}

.live-date .live-location .live-price {
    max-width: 50px;
    color: #ffffff;
}

th {
    text-align: center;
    font-size: 28px
}

td {
    text-align: center;
    font-family: "Roboto Condensed", sans-serif;
    font-size: 18px;
    font-weight: 500;
}

.ticketlink {
    color: #ffffff;
    text-decoration: underline;
}

.ticketlink:hover {
    color: #ffffff;
    text-decoration: underline;
}

.ticketlink:active {
    color: #ffffff;
    text-decoration: underline;
}

/*----------------------------------------------------------------------listen*/

.listeniframe {
    display: block;
    margin: auto;
    padding-top: 15px;
    border-radius: 5px;
    box-shadow: 0px 7px 0px #454647;
}


/*---------------------------------------------------------------media queries*/

@media(min-width: 768px) {

    .carousel {
        width: 50%;
        height: 300;
        margin: auto;
        box-shadow: 7px 7px 3.5px #454647;
    }

    .carousel-caption {
        visibility: visible;
    }
}

@media(max-width: 991px) {
    .band-image {
        width: 160px;
        height: 160px;
        border-radius: 80px;
        padding-bottom: 10px;
        display: block;
        margin: auto;
    }

    .band-name {
        padding-top: 20px;
        font-family: "Abel", sans-serif;
        font-weight: 500;
        color: #ffffff;
        text-align: center;
    }

    .band-bio {
        padding-top: 10px;
        padding-bottom: 20px;
        font-family: "Roboto Condensed", sans-serif;
        font-size: 18px;
        font-weight: 500;
        color: #ffffff;
        text-align: center;
    }

}

@media(max-width: 992px) {
    .navbar-default .navbar-nav li a {
        padding-top: 30px;
        color: #ffffff;
        font-family: "Roboto Condensed", sans-serif;
        font-size: 18px;
        font-weight: 200;
    }

    .navbar {
        min-height: 70px;
    }

    .navbar-header {
        padding-bottom: 10px;
    }

    .navbar-brand {
        padding-top: 10px;
    }


    .carousel {
        width: 90%;
        height: 300;
        margin: auto;
    }
}

@media(max-width: 767px) {
    .navbar-default .navbar-nav li a {
        padding-top: 2px;
        color: #ffffff;
        font-family: "Roboto Condensed", sans-serif;
        font-size: 18px;
        font-weight: 200;
    }
    


}

